css/trainsmart.webflow.css
/* ... */
h6 {
  margin-top: 0px;
  margin-bottom: 10px;
  font-size: 12px;
  line-height: 18px;
  font-weight: 700;
}

p {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 18px;
  line-height: 25px;
  font-weight: 300;
  text-align: center;
}

.button {
  display: inline-block;
  margin-right: 10px;
  margin-left: 10px;
  padding: 12px 30px;
  border-radius: 4px;
  background-color: #2e9dff;
  -webkit-transition: background-color 300ms ease;
  transition: background-color 300ms ease;
  color: white;
  font-size: 16px;
  line-height: 21px;
  font-weight: 300;
  text-align: center;
  letter-spacing: 2px;
  text-decoration: none;
  text-transform: uppercase;
}

.button:hover {
  background-color: #69b9ff;
}

.button:active {
  background-color: #2e9dff;
}

.button.w--current {
  background-color: #2e80b6;
}

.button.full-width {
  display: block;
  width: 100%;
  margin-right: 0px;
  margin-left: 0px;
}

.button.tab {
  margin-right: 8px;
  margin-left: 8px;
  background-color: #92a0ad;
}

.button.tab:hover {
  background-color: #2e80b6;
}

.button.tab.w--current {
  background-color: #2e80b6;
}

.button.email-us {
  display: inline-block;
  width: 300px;
  text-align: center;
}

.button.form-fix {
  position: relative;
  top: -3px;
  display: inline-block;
}

.button.smallnav {
  margin-top: -8px;
  margin-bottom: 0px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-size: 16px;
}

.navigation-link {
  padding-right: 18px;
  padding-left: 18px;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  color: #676770;
}

.navigation-link:hover {
  color: #2e9dff;
}

.navigation-link.get {
  display: none;
}

.navigation-link.smallnav {
  padding: 0px 10px 10px;
  font-size: 14px;
}

.navigation-bar {
  background-color: white;
}

.navigation-bar.absolute {
  position: fixed;
  top: -4px;
  overflow-x: hidden;
  overflow-y: hidden;
  width: 100%;
  height: 0px;
  border-bottom: 4px solid #69b9ff;
}

.navigation-bar.sticky {
  border-color: #69b9ff #2e9dff #2e9dff;
  border-bottom-style: solid;
  border-bottom-width: 4px;
}

.navigation-menu {
  float: right;
}

.navigation-menu.product {
  float: left;
}

.navigation-menu.no-float {
  left: -10px;
  width: 730px;
  float: none;
}

.brand-text {
  display: inline-block;
  margin-top: 0px;
  margin-bottom: 0px;
  font-family: 'Open Sans', sans-serif;
  color: #69b9ff;
  font-size: 25px;
  line-height: 25px;
  font-weight: 300;
  letter-spacing: 4px;
  text-transform: uppercase;
}

.brand-link {
  padding-top: 16px;
  padding-bottom: 16px;
}

.section {
  position: relative;
  padding: 80px 10px;
  background-color: white;
  text-align: center;
}

.section.accent {
  background-color: #192024;
}

.section.no-shon {
  display: none;
}

.section.accent2 {
  background-color: #edeff2;
}

.section.no-bottom {
  display: block;
  padding-bottom: 0px;
}

.section.no-bottom.history {
  display: block;
}

.section.no-bottom.partners {
  display: block;
}

.white-box {
  height: 345px;
  padding: 15px;
  border: 1px solid #dcebf7;
  border-radius: 5px;
  background-color: white;
  text-align: center;
}

.white-box.transparent {
  height: auto;
  border-style: none;
  background-color: transparent;
}

.white-box.testimonial {
  height: 432px;
}

.white-box.managers {
  display: block;
  height: auto;
  margin-right: auto;
  margin-left: auto;
  padding-bottom: 35px;
}

.white-box.inventors {
  height: 537px;
  text-align: center;
}

.white-box.partners {
  height: auto;
  margin-bottom: 30px;
}

.hero-section {
  padding-top: 242px;
  padding-bottom: 242px;
}

.hero-section.centered {
  padding-top: 130px;
  padding-bottom: 130px;
  border-color: #69b9ff;
  border-bottom-style: solid;
  border-bottom-width: 4px;
  background-image: -webkit-linear-gradient(rgba(46, 157, 255, 0.49), rgba(46, 157, 255, 0.2)), url('../images/photo-1416359658663-73a3834895eb.jpg');
  background-image: linear-gradient(rgba(46, 157, 255, 0.49), rgba(46, 157, 255, 0.2)), url('../images/photo-1416359658663-73a3834895eb.jpg');
  background-position: 0% 0%, 50% 50%;
  background-size: auto, cover;
  text-align: center;
}

.hero-heading {
  margin-bottom: 30px;
  color: white;
  font-size: 34px;
  line-height: 60px;
  font-weight: 300;
  text-align: center;
  letter-spacing: 4px;
  text-transform: uppercase;
}

.hero-subheading {
  margin-bottom: 40px;
  color: #2e9dff;
  font-size: 25px;
  line-height: 25px;
  font-weight: 300;
  text-align: center;
  letter-spacing: 3px;
  text-transform: uppercase;
}

.hollow-button {
  display: inline-block;
  margin-right: 0px;
  margin-left: 0px;
  padding: 10px 30px;
  float: none;
  border: 1px solid #2e9dff;
  border-radius: 4px;
  background-color: transparent;
  -webkit-transition: background-color 300ms ease, border 300ms ease, color 300ms ease;
  transition: background-color 300ms ease, border 300ms ease, color 300ms ease;
  color: #2e9dff;
  font-size: 16px;
  line-height: 21px;
  font-weight: 300;
  letter-spacing: 2px;
  text-decoration: none;
  text-transform: uppercase;
}

.hollow-button:hover {
  border-color: #69b9ff;
  background-color: #69b9ff;
  color: white;
}

.hollow-button.all-caps {
  text-transform: uppercase;
}

.hollow-button.submit {
  display: inline-block;
  float: right;
  text-align: center;
}

.hollow-button.email-us {
  width: 300px;
  text-align: center;
}

.section-heading {
  margin-top: 0px;
  margin-bottom: 16px;
}

.section-heading.centered {
  color: #676770;
  font-size: 30px;
  font-weight: 300;
  text-align: center;
  letter-spacing: 5px;
  text-transform: uppercase;
}

.section-heading.centered.white {
  color: white;
}

.section-subheading.center {
  color: #8e8e9c;
  font-size: 20px;
  font-weight: 300;
  text-align: center;
  letter-spacing: 3px;
  text-transform: uppercase;
}

.section-subheading.center.off-white {
  padding-bottom: 0px;
  color: #e8e8e8;
}

.section-subheading.subhero {
  margin-top: 50px;
  margin-bottom: 0px;
  font-size: 24px;
}
/* ... */

